added a soft delete function, se we dont lose User data